# Kavach-AI

./: PHASE_1_RESEARCH_ARCHITECTURE.md  PHASE_2_SYSTEM_DESIGN.md  PHASE_3_UI_UX_DESIGN.md  README.md  start.txt
kavach-ai/: PROJECT_SUMMARY.md  README.md  docker-compose.yml  generate_pptx.py  pitch-deck.html
kavach-ai/backend/: .env  kavach.db  pyproject.toml  requirements.txt
kavach-ai/backend/app/: __init__.py  config.py  main.py
kavach-ai/backend/app/ai/: __init__.py  base.py  claude.py  gemini.py  local.py  openai.py
kavach-ai/backend/app/api/routes/: agents.py  approvals.py  attacks.py  auth.py  events.py  monitoring.py  policies.py
kavach-ai/backend/app/api/websocket/: manager.py
kavach-ai/backend/app/cache/: redis.py
kavach-ai/backend/app/core/: rbac.py  security.py
kavach-ai/backend/app/db/: base.py  session.py
kavach-ai/backend/app/models/: __init__.py  agent.py  approval.py  event.py  policy.py  user.py
kavach-ai/backend/app/queue/: __init__.py
kavach-ai/backend/app/schemas/: __init__.py  agent.py  approval.py  event.py  policy.py  user.py
kavach-ai/backend/app/services/analysis/: __init__.py  intent.py  prompt_injection.py  risk.py
kavach-ai/backend/app/services/approval/: __init__.py  workflow.py
kavach-ai/backend/app/services/learning/: behavior.py  trust.py
kavach-ai/backend/app/services/mcp/: __init__.py  interceptor.py  proxy.py
kavach-ai/backend/app/services/memory/: __init__.py  inspector.py
kavach-ai/backend/app/services/policy/: __init__.py  engine.py
kavach-ai/backend/app/utils/: helpers.py  logger.py
kavach-ai/backend/tests/: conftest.py
kavach-ai/backend/tests/test_api/: test_auth.py
kavach-ai/frontend/: Dockerfile  README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts
(+17 files in other folders)
